# naics-snap-desktop

./: .gitignore  HANDOFF.md  README.md  SESSION_HANDOFF.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  api.ts  export.ts  main.tsx  sectors.ts  settings.tsx  state.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: business_terms.rs  lib.rs  license.rs  main.rs  menu.rs  naics.rs  pdf.rs  store.rs
src-tauri/tests/: naics_db_integration.rs
src/components/: AddCodeModal.tsx  AddToCollectionModal.tsx  BrowseView.tsx  CodeDetailView.tsx  CodeRow.tsx  CollectionFormModal.tsx  CollectionsView.tsx  CommandPalette.tsx  FavoritesView.tsx  Modal.tsx  PremiumPromptModal.tsx  SearchView.tsx  SettingsView.tsx  Splitter.tsx  StatusBar.tsx  Toaster.tsx
src/hooks/: useListKeyNav.ts
